@@ -241,6 +241,8 @@ class Optimize:
         dotted = dot(norm1, norm2)
         if dotted > 1.0: # If normalized, this is due to rounding error
             dotted = 1.0
+        elif dotted < -1.0: # If normalized, this is due to rounding error
+            dotted = -1.0            
         rad = abs(math.acos(dotted))
         angle = rad*180.0/math.pi
         if angle > 180.0:
